--- a/index.html
+++ b/index.html
@@ -719,11 +719,11 @@
           </div>
           <!-- Copyright -->
           <div class="md:col-6 text-center md:text-left mb-4 md:mb-0">
-            <p class="text-white/75">© 2023 Gauarva. All rights reserved.</p>
+            <p class="text-white/75">© 2025 Gauarva Yadav. All rights reserved.</p>
           </div>
           <!-- Developer Info -->
           <div class="md:col-6 text-center md:text-right">
-            <p class="text-white/75">Developed by <a class="link text-white" href="https://themeforest.net/user/platol/portfolio" target="_blank" rel="noopener noreferrer">Platol</a>
+            <p class="text-white/75">Developed by <a class="link text-white" href="https://endeavourdigital.in/" target="_blank" rel="noopener noreferrer">Endeavour Digital</a>
             </p>
           </div>
         </div>
