--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charSet="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
-    <title>Shared on THEMELOCK.COM - Gauarva - TailwindCSS Personal Portfolio Template</title>
+    <title>Gaurava Yadav - International Award-Winning Entrepreneur & Founder, IPN FORUM</title>
     
-    <meta name="author" content="Platol" />
-    <meta name="description" content="TailwindCSS Personal Portfolio Template" />
-    <meta property="og:title" content="Gauarva - TailwindCSS Personal Portfolio Template" />
-    <meta property="og:description" content="TailwindCSS Personal Portfolio Template" />
-    <meta property="og:image" content="./images/ogimage.jpg" />
+    <meta name="author" content="Gaurava Yadav" />
+    <meta name="description" content="International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
+    <meta property="og:title" content="Gaurava Yadav - International Award-Winning Entrepreneur & Founder, IPN FORUM" />
+    <meta property="og:description" content="International Award-Winning Entrepreneur | Founder, Indian Principals' Network (IPN) FORUM" />
+    <meta property="og:image" content="./images/ogimage.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
     <meta name="twitter:title" content="Gauarva - TailwindCSS Personal Portfolio Template" />
-    <meta name="twitter:image" content="./images/ogimage.jpg" />
+    <meta name="twitter:image" content="./images/ogimage.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="TailwindCSS Personal Portfolio Template" />
     
@@ -66,16 +66,13 @@
             <span class="block text-white/75 mb-1">Social Links:</span>
             <ul class="inline-flex gap-x-4">
               <li class="inline-block hover:opacity-75 transition-op duration-300">
-                <a href="https://facebook.com/" class="link">FB</a>
+                <a href="https://www.facebook.com/gauravayadavindia/" class="link">FB</a>
               </li>
               <li class="inline-block hover:opacity-75 transition-op duration-300">
-                <a href="https://twitter.com/" class="link">TW</a>
+                <a href="https://x.com/yadavgaurava" class="link">X</a>
               </li>
               <li class="inline-block hover:opacity-75 transition-op duration-300">
-                <a href="https://linkedin.com/" class="link">IN</a>
-              </li>
-              <li class="inline-block hover:opacity-75 transition-op duration-300">
-                <a href="https://github.com/" class="link">GITHUB</a>
+                <a href="https://www.linkedin.com/in/gauravayadav/" class="link">IN</a>
               </li>
             </ul>
           </div>
@@ -148,7 +145,7 @@
 
               <!-- introduction -->
               <div class="mt-5 md:mt-8 md:text-xl font-light md:max-w-xl mx-auto opacity-80" data-aos="fade-up-sm" data-aos-delay="100">
-                A front-end developer, UI designer, and all-around doodler who enjoys developing accessible, usable and engaging websites &amp; apps that bring your products to life.
+                International Award-winning entrepreneur and founder of Indian Principals' Network (IPN) FORUM, India's largest knowledge network of school leaders. Empowering over 15,000 school leaders and 500,000+ teachers across 55+ countries.
               </div>
             </div>
           </div>
@@ -595,45 +592,45 @@
           <div class="animated-line animated-line-one mb-5">
             <div class="line-block">
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
             </div>
             <div class="line-block-copy">
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
             </div>
@@ -642,45 +639,45 @@
           <div class="animated-line animated-line-two">
             <div class="line-block">
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
             </div>
             <div class="line-block-copy">
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
             </div>
@@ -693,16 +690,13 @@
             <!-- Social Links -->
             <ul class="inline-flex flex-wrap justify-center md:justify-start gap-x-6">
               <li class="inline-block hover:opacity-75 transition-op duration-300">
-                <a href="https://facebook.com/" class="link">Facebook</a>
+                <a href="https://www.facebook.com/gauravayadavindia/" class="link">Facebook</a>
               </li>
               <li class="inline-block hover:opacity-75 transition-op duration-300">
-                <a href="https://twitter.com/" class="link">Twitter</a>
+                <a href="https://x.com/yadavgaurava" class="link">Twitter</a>
               </li>
               <li class="inline-block hover:opacity-75 transition-op duration-300">
-                <a href="https://linkedin.com/" class="link">Linkedin</a>
-              </li>
-              <li class="inline-block hover:opacity-75 transition-op duration-300">
-                <a href="https://github.com/" class="link">Github</a>
+                <a href="https://www.linkedin.com/in/gauravayadav/" class="link">Linkedin</a>
               </li>
             </ul>
           </div>
