--- a/privacy.html
+++ b/privacy.html
@@ -3,18 +3,18 @@
   <head>
     <meta charSet="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
-    <title>Shared on THEMELOCK.COM - Gauarva - TailwindCSS Personal Portfolio Template</title>
+    <title>Privacy Policy - Gaurava Yadav | International Award-Winning Entrepreneur</title>
     
-    <meta name="author" content="Platol" />
-    <meta name="description" content="TailwindCSS Personal Portfolio Template" />
-    <meta property="og:title" content="Gauarva - TailwindCSS Personal Portfolio Template" />
-    <meta property="og:description" content="TailwindCSS Personal Portfolio Template" />
-    <meta property="og:image" content="./images/ogimage.jpg" />
+    <meta name="author" content="Gaurava Yadav" />
+    <meta name="description" content="Privacy policy for Gaurava Yadav - International Award-Winning Entrepreneur and Founder of IPN FORUM" />
+    <meta property="og:title" content="Privacy Policy - Gaurava Yadav | International Award-Winning Entrepreneur" />
+    <meta property="og:description" content="Privacy policy for Gaurava Yadav - International Award-Winning Entrepreneur and Founder of IPN FORUM" />
+    <meta property="og:image" content="./images/ogimage.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
     <meta name="twitter:title" content="Gauarva - TailwindCSS Personal Portfolio Template" />
-    <meta name="twitter:image" content="./images/ogimage.jpg" />
+    <meta name="twitter:image" content="./images/ogimage.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="TailwindCSS Personal Portfolio Template" />
     
@@ -66,16 +66,13 @@
             <span class="block text-white/75 mb-1">Social Links:</span>
             <ul class="inline-flex gap-x-4">
               <li class="inline-block hover:opacity-75 transition-op duration-300">
-                <a href="https://facebook.com/" class="link">FB</a>
+                <a href="https://www.facebook.com/gauravayadavindia/" class="link">FB</a>
               </li>
               <li class="inline-block hover:opacity-75 transition-op duration-300">
-                <a href="https://twitter.com/" class="link">TW</a>
+                <a href="https://x.com/yadavgaurava" class="link">X</a>
               </li>
               <li class="inline-block hover:opacity-75 transition-op duration-300">
-                <a href="https://linkedin.com/" class="link">IN</a>
-              </li>
-              <li class="inline-block hover:opacity-75 transition-op duration-300">
-                <a href="https://github.com/" class="link">GITHUB</a>
+                <a href="https://www.linkedin.com/in/gauravayadav/" class="link">IN</a>
               </li>
             </ul>
           </div>
@@ -131,13 +128,13 @@
             <div class="lg:col-10">
               <div class="content content-dark">
                 <h2>Information we collect</h2>
-                <p>We collect personal information from our users, including names, email addresses, company names, services requested, budget information, and project descriptions. We collect this information through a form on our website.</p>
+                <p>We collect personal information from educational institutions, school leaders, and teachers who engage with our educational platforms and services. This includes names, email addresses, school information, and professional details needed to provide our services.</p>
                 <h2>How we use your information</h2>
-                <p>We use the information we collect to respond to enquiries and to help improve our website. We do not share this information with third parties.</p>
+                <p>The information we collect helps us provide educational services, connect school leaders across our network, organize professional development programs, and improve our educational initiatives. We use this information to enhance the educational ecosystem across India and neighboring regions.</p>
                 <h2>How we protect your information</h2>
-                <p>We take reasonable steps to protect the personal information we collect from our users. Our website&#x27;s form is powered by Next.js, and we use email to help protect the information that we collect.</p>
+                <p>We implement appropriate security measures to protect the personal information we collect from our users. Our websites use secure technologies to help safeguard the information that we collect.</p>
                 <h2>Accessing, modifying, and deleting your information</h2>
-                <p>Users may request to access, modify, or delete their personal information by contacting us at <a href="mailto:platoltheme@gmail.com">platoltheme@gmail.com</a>. </p>
+                <p>Users may request to access, modify, or delete their personal information by contacting us at <a href="mailto:gaurava@eduace.in">gaurava@eduace.in</a>.</p>
                 <h2>Data breaches</h2>
                 <p>In the event of a data breach, we will take immediate steps to contain the breach, investigate the cause, and notify affected users as required by law.</p>
                 <h2>Sensitive personal information</h2>
@@ -145,7 +142,7 @@
                 <h2>Changes to this policy</h2>
                 <p>We reserve the right to modify this privacy policy at any time. Any changes will be reflected on this page.</p>
                 <h2>Contact us</h2>
-                <p>If you have any questions about this privacy policy or our practices, please contact us at <a href="mailto:platoltheme@gmail.com">platoltheme@gmail.com</a>. </p>
+                <p>If you have any questions about this privacy policy or our practices, please contact us at <a href="mailto:gaurava@eduace.in">gaurava@eduace.in</a> or call us at <a href="tel:+91-084007-00199">+91-084007-00199</a>.</p>
               </div>
             </div>
           </div>
@@ -164,45 +161,45 @@
           <div class="animated-line animated-line-one mb-5">
             <div class="line-block">
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
             </div>
             <div class="line-block-copy">
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
             </div>
@@ -211,45 +208,45 @@
           <div class="animated-line animated-line-two">
             <div class="line-block">
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
             </div>
             <div class="line-block-copy">
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
               <span class="mr-20 md:mr-24">
-                <span class="cta-text">Let’s make something</span>
+                <span class="cta-text">Let's make something</span>
                 <img alt="arrow-right" loading="lazy" width="39" height="31" class="inline-block ml-10 md:ml-16 cta-icon" src="./images/arrow-right.svg" />
               </span>
             </div>
@@ -262,16 +259,13 @@
             <!-- Social Links -->
             <ul class="inline-flex flex-wrap justify-center md:justify-start gap-x-6">
               <li class="inline-block hover:opacity-75 transition-op duration-300">
-                <a href="https://facebook.com/" class="link">Facebook</a>
+                <a href="https://www.facebook.com/gauravayadavindia/" class="link">Facebook</a>
               </li>
               <li class="inline-block hover:opacity-75 transition-op duration-300">
-                <a href="https://twitter.com/" class="link">Twitter</a>
+                <a href="https://x.com/yadavgaurava" class="link">X</a>
               </li>
               <li class="inline-block hover:opacity-75 transition-op duration-300">
-                <a href="https://linkedin.com/" class="link">Linkedin</a>
-              </li>
-              <li class="inline-block hover:opacity-75 transition-op duration-300">
-                <a href="https://github.com/" class="link">Github</a>
+                <a href="https://www.linkedin.com/in/gauravayadav/" class="link">LinkedIn</a>
               </li>
             </ul>
           </div>
@@ -288,7 +282,7 @@
           </div>
           <!-- Copyright -->
           <div class="md:col-6 text-center md:text-left mb-4 md:mb-0">
-            <p class="text-white/75">© 2023 Gauarva. All rights reserved.</p>
+            <p class="text-white/75">© 2023 Gaurava Yadav. All rights reserved.</p>
           </div>
           <!-- Developer Info -->
           <div class="md:col-6 text-center md:text-right">
