--- a/blog.html
+++ b/blog.html
@@ -9,12 +9,12 @@
     <meta name="description" content="TailwindCSS Personal Portfolio Template" />
     <meta property="og:title" content="Gauarva - TailwindCSS Personal Portfolio Template" />
     <meta property="og:description" content="TailwindCSS Personal Portfolio Template" />
-    <meta property="og:image" content="./images/ogimage.jpg" />
+    <meta property="og:image" content="./images/ogimage.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
     <meta name="twitter:title" content="Gauarva - TailwindCSS Personal Portfolio Template" />
-    <meta name="twitter:image" content="./images/ogimage.jpg" />
+    <meta name="twitter:image" content="./images/ogimage.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:description" content="TailwindCSS Personal Portfolio Template" />
     
